--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="text" style="padding-top: 0px;">
       <p>
-        <h2 style="font-size: 50px;">Vajra Gold Day Pass</h2>
+        <h2 style="font-size: 55px;">Vajra Gold Day Pass</h2>
       </p>
       <div >
         <button class="daily">Daily</button> &nbsp  &nbsp
@@ -26,7 +26,7 @@
       <br><p class="gray">Pass no: TPASS1305114</p><br>
       <p style="text-decoration: underline; font-size:17px;" class="link">Click here to view validation instructions</p><br><br>
       <div class="footer">
-        <img src="qr-code.png" alt="Image" width="35px" height="35px" style="background-color: #117F99; float: left;">
+        <img src="qr-code.png" alt="Image" width="60px" height="60px" style="background-color: #117F99; float: left;">
         <button id="scan-button">Scan conductor QR for validation</button>    
       </div>
     </div>
@@ -79,28 +79,31 @@
       <img src="sayan.jpg" alt="Image">
     </div>
     <div class="text">
-      <p class="gray">Passenger Name</p>
-      <p style="font-size: 30px;">Sayan Sengupta</p>
+      <p class="question">Passenger Name</p>
+      <p class="answer">Sayan Sengupta</p>
       <br>
-      <p class="gray">Identification Type</p>
-      <p style="font-size: 30px;">Aadhaar Card</p>
+      <p class="question">Identification Type</p>
+      <p class="answer">Aadhaar Card</p>
       <br>
-      <p class="gray">Identification number (Last 4 digits)</p>
-      <p style="font-size: 30px;">8350</p>
+      <p class="question">Identification number (Last 4 digits)</p>
+      <p class="answer">8350</p>
       <br>
-      <p class="gray">Pass purchase date</p>
-      <p id="date1" style="font-size: 30px;"></p>
+      <p class="question">Pass purchase date</p>
+      <p class="answer"id="date1"></p>
       <br>
-      <p class="gray">Pass valid from</p>
-      <p id="date2" style="font-size: 30px;"></p>
+      <p class="question">Pass valid from</p>
+      <p class="answer"id="date2"></p>
       <br>
-      <p class="gray">Pass valid till</p>
-      <p id="date3" style="font-size: 30px;"></p>
+      <p class="question">Pass valid till</p>
+      <p class="answer"id="date3"></p>
       <br>
       <div class="fare">
-        <p class="gray">Pass fare</p>
-        <p style="font-size: 40px;">₹ 120</p>
+        <p class="question">Pass fare</p>
+        <p class="answer"style="font-size: 45px;">₹ 120</p>
         <br>
+      </div>
+      <div class="footer2" style="padding-left: 38%;">
+        <button>&#9993 Generate email recepit</button>
       </div>
       <br>
     </div>
