--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <br>
 
-    <button id="modal-button">OK</button>
+    <button id="modal-button"><strong>OK</strong></button>
   </div>
   <div id="overlay"></div>
   <p class="header">Booking details</p>
