--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
 <body onload="changeImage()">
   <div class="header">
-    <p style="color: white;">
-      &#x2190 Your Bus Pass
-    </p>
+    <div class="word-container" style="color: white;">
+      <span class="left-word">&#x2190 Your Bus Pass</span>
+      <span class="right-word">Support</span>
+    </div>
   </div>
   <div class="box1 box">
     <div class="image">
