--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="ac">AC</button>
       </div>
       <br><p class="gray">Pass no: TPASS1305114</p><br>
-      <p style="text-decoration: underline; font-size:17px;" class="link">Click here to view validation instructions</p><br><br>
+      <p style="text-decoration: underline; font-size:17px;" class="link">Click here to view validation instructions</p><br>
       <div class="footer">
         <img src="qr-code.png" alt="Image" width="60px" height="60px" style="background-color: #117F99; float: left;">
         <button id="scan-button">Scan conductor QR for validation</button>    
