--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <button class="daily">Daily</button> &nbsp  &nbsp
         <button class="ac">AC</button>
       </div>
-      <br><p class="gray">Pass no: TPASS1305114</p><br>
+      <br><p class="question">Pass no: TPASS1305114</p><br>
       <p style="text-decoration: underline; font-size:17px;" class="link">Click here to view validation instructions</p><br>
       <div class="footer">
         <img src="qr-code.png" alt="Image" width="60px" height="60px" style="background-color: #117F99; float: left;">
