--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2 style="font-size: 55px;">Vajra Gold Day Pass</h2>
       </p>
       <div >
-        <button class="daily">Daily</button> &nbsp  &nbsp
+        <button class="daily">daily</button> &nbsp  &nbsp
         <button class="ac">AC</button>
       </div>
       <br><p class="question">Pass no: TPASS1305114</p><br>
