--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <br>
       </div>
       <div class="footer2" style="padding-left: 38%;">
-        <button>&#9993 Generate email recepit</button>
+        <button>&#x2709 Generate email recepit</button>
       </div>
       <br>
     </div>
