--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="text" style="padding-top: 0px;">
       <p>
-        <h2 style="font-size: 55px;">Vajra Gold Day Pass</h2>
+        <h2 style="font-size: 55px; color: #3d403e;">Vajra Gold Day Pass</h2>
       </p>
       <div >
         <button class="daily">daily</button> &nbsp  &nbsp
