--- a/index.html
+++ b/index.html
@@ -109,11 +109,16 @@
       <br>
     </div>
   </div>
+  <div class="box3">
+    <div class="busnumber" id="result">Bus Number</div>
+  </div>
+  
   <div class="bottom">
     <p>Ask conductor to scan the QR code</p><br>
     <img id="image" src="qrcode.png" alt="Image" width="400" height="400">
   </div>
 
+  <script src="https://rawgit.com/cozmo/jsQR/master/dist/jsQR.js"></script>
   <script src="date.js"></script>
   <script src="script.js"></script>
 </body>
