--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
   </div>
   <div class="box3">
-    <div class="busnumber" id="result">Bus Number</div>
+    <div class="busnumber" id="result"><div id="time"></div>Scan to add Bus Route</div>
   </div>
   
   <div class="bottom">
