--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p class="loading-text">Please wait while we validate your pass.</p>
   </div>
   <div id="modal" class="success-modal">
-    <img src="success.jpg" alt="Image" width="250px" height="300px">
+    <img src="checked.png" alt="Image" width="300px" height="300px">
     <p class="success-message">Self verification done successfully</p>
     <br>
     <br>
@@ -110,7 +110,7 @@
     </div>
   </div>
   <div class="box3">
-    <div class="busnumber" id="result"><div id="time"></div>Scan to add Bus Route</div>
+    <button><div class="busnumber" id="result"><div id="time"></div>Scan to add Bus Route</div></button>
   </div>
   
   <div class="bottom">
