--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
   </div>
   <div class="box3">
-    <button><div class="busnumber" id="result"><div id="time"></div>Scan to add Bus Route</div></button>
+    <button style="background-color: #BDF7BD; border: none;"><div class="busnumber" id="result"><div id="time"></div>Scan to add Bus Route</div></button>
   </div>
   
   <div class="bottom">
